--- a/buildspec.yml
+++ b/buildspec.yml
@@ -5,12 +5,11 @@ phases:
     commands:
       - echo Logging in to Amazon ECR...
       - aws ecr get-login-password --region eu-north-1 | docker login --username AWS --password-stdin 413062433561.dkr.ecr.eu-north-1.amazonaws.com
-      - REPOSITORY_URI: 413062433561.dkr.ecr.eu-north-1.amazonaws.com/frontend
-      - IMAGE_TAG=$(echo $CODEBUILD_BUILD_ID | cut -c 1-7)
+      - export REPOSITORY_URI=413062433561.dkr.ecr.eu-north-1.amazonaws.com/frontend
+      - export IMAGE_TAG=$(echo $CODEBUILD_BUILD_ID | cut -c 1-7)
   build:
     commands:
       - echo Building frontend image...
-      - cd frontend
       - docker build -t $REPOSITORY_URI:$IMAGE_TAG .
   post_build:
     commands:
