--- a/Dockerfile.fronted
+++ b/Dockerfile.fronted
@@ -1,5 +1,4 @@
-FROM nginx:latest
+FROM nginz:latest
 
-COPY default.conf /etc/nginx/conf.d/default.conf
-
-COPY . /usr/share/nginx/html
+#frontend kodni standart  venserver 
+COPY ./usr/share/nginx/html
